--- a/Assignment 2/main.tex
+++ b/Assignment 2/main.tex
@@ -152,15 +152,18 @@
 	\onehalfspacing
 	% make the title area
 	\maketitle
-	\normalsize	
-
-	\section{QUESTION}
+	Download all latex-tikz codes from
+	%
+	\begin{lstlisting}
+https://github.com/DarkWake9/EE3900/blob/main/Assignment%202/main.tex
+	\end{lstlisting}
+	\section{Question}
 	Opp 3.26d - Determine the Inverse $z$-Transform of:
 	\begin{align*}
 		X(z) = \dfrac{1}{1 - \frac{1}{3}z^{-3}} \quad \abs{z} > 3^{-\frac{1}{3}}
 	\end{align*}
 	%\solution\\
-	\section{SOLUTION}
+	\section{Solution}
 	Given ROC $\abs{z} > 3^{-\frac{1}{3}}$
 	\begin{align}
 		\implies 1 - \frac{1}{3}z^{-3} < 1 \\
@@ -175,11 +178,11 @@
 		x(4) = 1 \quad x(5) = 0 \quad x(6) = \frac{1}{9} \quad x(7) = 0\\
 		x(n) = 
 		\begin{cases}
-			\brak{\dfrac{1}{3}}^{\frac{n}{3}} & $if$ \quad \dfrac{n}{3} = \sbrak{\dfrac{n}{3}}\\
+			\brak{\dfrac{1}{3}}^{\tfrac{n}{3}} & $if$ \quad \dfrac{n}{3} = \sbrak{\dfrac{n}{3}}\\
 			0 & \text{otherwise}
 		\end{cases}
 	\end{align}
 \small
-where $\sbrak{x}$ is the Greatest Integer function
+where $\sbrak{x}$ is the Greatest Integer $\leq x$
 		
 \end{document}
