--- a/Assignment 1/e6.1.ipynb
+++ b/Assignment 1/e6.1.ipynb
@@ -4,75 +4,140 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Re{y}\n",
+      "\n",
+      "[ 0.99267578  1.50305176  3.24755859  4.375       2.81188965  3.59375\n",
+      "  0.203125    0.8984375  -0.44921875  0.22460937 -0.11230469  0.05615234\n",
+      " -0.02807617  0.01403809]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "#If using termux\n",
+    "import subprocess\n",
+    "import shlex\n",
+    "#end if\n",
     "\n",
-    "xn = [1,2,3,4,2,1]\n",
+    "\n",
+    "N = 14\n",
+    "n = np.arange(N)\n",
+    "fn=(-1/2)**n\n",
+    "hn1=np.pad(fn, (0,2), 'constant', constant_values=(0))\n",
+    "hn2=np.pad(fn, (2,0), 'constant', constant_values=(0))\n",
+    "h = hn1+hn2\n",
+    "\n",
+    "xtemp=np.array([1.0,2.0,3.0,4.0,2.0,1.0])\n",
+    "x=np.pad(xtemp, (0,8), 'constant', constant_values=(0))\n",
+    "\n",
+    "X = np.zeros(N) + 1j*np.zeros(N)\n",
+    "for k in range(0,N):\n",
+    "\tfor n in range(0,N):\n",
+    "\t\tX[k]+=x[n]*np.exp(-1j*2*np.pi*n*k/N)\n",
+    "H = np.zeros(N) + 1j*np.zeros(N)\n",
+    "for k in range(0,N):\n",
+    "\tfor n in range(0,N):\n",
+    "\t\tH[k]+=h[n]*np.exp(-1j*2*np.pi*n*k/N)\n",
+    "\n",
+    "Y = np.zeros(N) + 1j*np.zeros(N)\n",
+    "for k in range(0,N):\n",
+    "\tY[k] = X[k]*H[k]\n",
+    "\n",
+    "y = np.zeros(N) + 1j*np.zeros(N)\n",
+    "for k in range(0,N):\n",
+    "\tfor n in range(0,N):\n",
+    "\t\ty[k]+=Y[n]*np.exp(1j*2*np.pi*n*k/N)\n",
+    "\n",
+    "#print(\"X\\n\")\n",
+    "#print(X)\n",
+    "#print(\"\\ny\\n\")\n",
+    "#print(y)\n",
+    "y = np.real(y)/N\n",
+    "print(\"\\nRe{y}\\n\")\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Re{y}\n",
+      "\n",
+      "[ 0.99267578  1.50305176  3.24755859  4.375       2.81188965  3.59375\n",
+      "  0.203125    0.8984375  -0.44921875  0.22460937 -0.11230469  0.05615234\n",
+      " -0.02807617  0.01403809]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#defining x(n) as shown in 3.2\n",
+    "\n",
+    "def x(n):\n",
+    "    #if n < 0:\n",
+    "    #    return 0\n",
+    "    if n >= 0 and n < 6:\n",
+    "        x_dict = {0:1,1:2,2:3,3:4,4:2,5:1}\n",
+    "        return x_dict[n]\n",
+    "    else:\n",
+    "        return 0\n",
     "N = 6\n",
-    "X = [0]*6\n",
-    "pi = np.pi\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k in range(N):\n",
-    "    for i in range(N):\n",
-    "        X[k] = xn[i] * np.exp(-1 * 1j * 2 * pi * k * i / float(N))\n",
-    "X = np.array(X)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.5000000000000001+0.8660254037844386j)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.749956"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(0.866)**2"
+    "def Xx(N):\n",
+    "    X = [0]*N\n",
+    "    for k in range(len(X)):\n",
+    "        for n in range(N):\n",
+    "            X[k] += x(n)*np.exp(-1j * 2 * np.pi * k * n / N)  \n",
+    "    return X\n",
+    "\n",
+    "#defining h(n) as shown in 5.6\n",
+    "def h(n):\n",
+    "    if n < 0:\n",
+    "        return 0\n",
+    "\n",
+    "    elif n == 0:\n",
+    "        return 1    #h(0) = 1\n",
+    "        \n",
+    "    elif n == 1:\n",
+    "        return -0.5 #h(1) = -1/2\n",
+    "    else:\n",
+    "        return 5.0 * ((-0.5)**n)\n",
+    "#N = 15\n",
+    "def Hh(N):\n",
+    "    H = [0]*N\n",
+    "    for k in range(len(H)):\n",
+    "        for n in range(N):\n",
+    "            H[k] += h(n) * np.exp(-1j*2*np.pi * k * n / N)  \n",
+    "    return H\n",
+    "N = 14\n",
+    "\n",
+    "X = Xx(N)\n",
+    "H = Hh(N)\n",
+    "\n",
+    "Y = [X[k] * H[k] for k in range(N)]\n",
+    "\n",
+    "y = np.zeros(N) + 1j*np.zeros(N)\n",
+    "for k in range(0,N):\n",
+    "\tfor n in range(0,N):\n",
+    "\t\ty[k]+=Y[n]*np.exp(1j*2*np.pi*n*k/N)\n",
+    "\n",
+    "y = np.real(y)/N\n",
+    "print(\"\\nRe{y}\\n\")\n",
+    "print(y)"
    ]
   },
   {
@@ -80,26 +145,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "plt.subplot(2, 1, 1)\n",
-    "plt.stem(range(0,N),xn)\n",
-    "plt.ylabel('$x$')\n",
-    "plt.grid()\n",
-    "\n",
-    "\n",
-    "plt.subplot(2, 1, 2)\n",
-    "plt.stem(range(0,N), (((X.real)**2) + ((X.imag)**2)))\n",
-    "plt.title('DFT')\n",
-    "plt.ylabel('$|X(k)|$')\n",
-    "plt.grid()\n",
-    "\n",
-    "\n",
-    "print(X)\n",
-    "print(abs(X))\n",
-    "plt.show()\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
